Fix time dropdown content overflow

--- a/src/domain/event/event.module.scss
+++ b/src/domain/event/event.module.scss
@@ -74,7 +74,7 @@
       grid-template-columns: auto auto;
     }
     @include respond-above(md) {
-      grid-template-columns: 3fr 2fr 55%;
+      grid-template-columns: 3fr minmax(170px, 2fr) 40%;
     }
   }
 }
